Added Script to publish WebJob Automatically

--- a/webjobs/WebJob1/WebJob1.csproj
+++ b/webjobs/WebJob1/WebJob1.csproj
@@ -12,5 +12,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.0-beta4" />
   </ItemGroup>
-
+  
+  <Target Name="PostPublishScript" AfterTargets="Publish">
+    <Exec Command="dotnet publish ..\$(AssemblyName)\ -o $(PublishDir)App_Data\Jobs\Triggered\$(AssemblyName)" />
+  </Target>
+  
 </Project>
