--- a/src/WebApplication1/WebApplication1.csproj
+++ b/src/WebApplication1/WebApplication1.csproj
@@ -16,4 +16,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\webjobs\WebJob1\WebJob1.csproj" />
+  </ItemGroup>
+
 </Project>
