--- a/webjobs/WebJob1/WebJob1.csproj
+++ b/webjobs/WebJob1/WebJob1.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.0-beta4" />
   </ItemGroup>
   
-  <Target Name="PostPublishScript" AfterTargets="Publish">
+  <Target Name="PostpublishScript" AfterTargets="Publish">
     <Exec Command="dotnet publish ..\$(AssemblyName)\ -o $(PublishDir)App_Data\Jobs\Triggered\$(AssemblyName)" />
   </Target>
   
