--- a/src/WebApplication1/WebApplication1.csproj
+++ b/src/WebApplication1/WebApplication1.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <Target Name="PostpublishScript" AfterTargets="Publish">
-    <Exec Command="dotnet publish ..\WebJob1\ -o $(PublishDir)App_Data\Jobs\Triggered\WebJob1" />
+    <Exec Command="dotnet publish ..\..\webjobs\WebJob1\ -o $(PublishDir)App_Data\Jobs\Triggered\WebJob1" />
   </Target>
   
 </Project>
