--- a/webjobs/WebJob1/WebJob1.csproj
+++ b/webjobs/WebJob1/WebJob1.csproj
@@ -6,11 +6,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="run.cmd" />
+    <None Remove="settings.job" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="run.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="settings.job">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.0-beta4" />
   </ItemGroup>
+
   
 </Project>
